Add --config option and fix --database-directory option

When database dir is specified at command line, the correct path is displayed
in the configuration widget, but the input field is disabled.
BUG: 218297
FIXED-IN: 5.6.0
CCBUG: 377587